# ezmsg-tasks

./: .gitignore  pyproject.toml
src/ezmsg/tasks/: cuedactiontask.py  directory.py  feedbacktask.py  frequencydecodemessage.py  frequencymapper.py  reaction.py  ssaep.py  task.py
src/ezmsg/tasks/ssvep/: dynamicclasses.py  stimulus.py  task.py
