[project]
name = "ezmsg-tasks"
version = "0.2.0"
description = "Psychophysics tasks for ezmsg"
authors = [
    { name = "Griffin Milsap", email = "griffin.milsap@jhuapl.edu" },
]
readme = "README.md"
homepage = "https://github.com/griffinmilsap/ezmsg-tasks"
requires-python = ">=3.10"
dependencies = [
    "ezmsg-panel>=0.5.0",
    "ezmsg-sigproc>=1.4.2",
    "ezmsg>=3.5.0",
]

[project.scripts]
directory = "ezmsg.tasks.directory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
